docker compose file added

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,9 @@
 	</dependencies>
 
 	<build>
+		
+		<finalName>onetomany_docker_app</finalName>
+	
 		<plugins>
 			<plugin>
 				<groupId>org.jacoco</groupId>
